cmake_minimum_required(VERSION 3.16)
project(05_30)

set(CMAKE_CXX_STANDARD 14)

add_executable(05_30 main.cpp)
add_executable(cf645C cf645C.cpp)
add_executable(AtcoderNPC2020A AtcoderNPC2020A.cpp)
add_executable(AtcoderNPC2020B AtcoderNPC2020B.cpp)
add_executable(try1 try1.cpp)
add_executable(P6567 P6567.cpp)
add_executable(CF88A CF88A.cpp)