cmake_minimum_required(VERSION 3.16)
project(06_06)

set(CMAKE_CXX_STANDARD 14)

add_executable(06_06 main.cpp)
add_executable(USACO2020OB2 USACO2020OB2.cpp)
add_executable(test test.cpp)
add_executable(Hello Hello.cpp)
add_executable(PRICECON PRICECON.cpp)
add_executable(Atcoder169A Atcoder169A.cpp)
add_executable(Atcoder169B Atcoder169B.cpp)
add_executable(Atcoder169C Atcoder169C.cpp)
add_executable(2 2.cpp)
add_executable(POJ1995 POJ1995.cpp)
add_executable(POJ2299 POJ2299.cpp)
add_executable(ACWing95 ACWing95.cpp)
add_executable(CF670C CF670C.cpp)
add_executable(BZOJ3032 BZOJ3032.cpp)