cmake_minimum_required(VERSION 3.16)
project(06_13)

set(CMAKE_CXX_STANDARD 14)

add_executable(06_13 main.cpp)
add_executable(TokioA TokioA.cpp)
add_executable(TokioB TokioB.cpp)
add_executable(TokioC TokioC.cpp)
add_executable(son son.cpp)
add_executable(POJ3263 POJ3263.cpp)
add_executable(CF649A CF649A.cpp)
add_executable(CF649B CF649B.cpp)
add_executable(P1908 P1908.cpp)
add_executable(CF1365A CF1365A.cpp)
add_executable(CF1365B CF1365B.cpp)
add_executable(P3367 P3367.cpp)
add_executable(hhh hhh.cpp)
add_executable(test test.cpp)
add_executable(P1955 P1955.cpp)