cmake_minimum_required(VERSION 3.16)
project(06_24)

set(CMAKE_CXX_STANDARD 14)

add_executable(06_24 main.cpp)
add_executable(a a.cpp)
add_executable(b b.cpp)
add_executable(c c.cpp)
add_executable(d d.cpp)
add_executable(e e.cpp)
add_executable(f f.cpp)
add_executable(sort sort.cpp)
add_executable(mis mis.cpp)
add_executable(CF1373A CF1373A.cpp)
add_executable(h h.cpp)
add_executable(g g.cpp)
add_executable(CF651C CF651C.cpp)
add_executable(CF371E CF371E.cpp)
add_executable(P1248 P1248.cpp)
add_executable(P3805 P3805.cpp)
add_executable(P5657 P5657.cpp)
add_executable(P2114 P2114.cpp)
add_executable(P6581 P6581.cpp)
add_executable(P1359 P1359.cpp)
add_executable(P10481 P10481.cpp)
add_executable(P1060 P1060.cpp)
add_executable(P5490 P5490.cpp)
add_executable(P3372 P3372.cpp)
add_executable(ABC172A ABC172A.cpp)
add_executable(ABC172B ABC172B.cpp)
add_executable(ABC172C ABC172C.cpp)
add_executable(ABC172D ABC172D.cpp)