cmake_minimum_required(VERSION 3.16)
project(07_04)

set(CMAKE_CXX_STANDARD 11)

add_executable(07_04 main.cpp)
add_executable(P3389 P3389.cpp)
add_executable(c c.cpp)
add_executable(P2455 P2455.cpp)
add_executable(P1627 P1627.cpp)
add_executable(P1226 P1226.cpp)
add_executable(P3383 P3383.cpp)
add_executable(P3811 P3811.cpp)
add_executable(P5656 P5656.cpp)
add_executable(ac ac.cpp)
add_executable(P2197 P2197.cpp)
add_executable(P3370 P3370.cpp)
add_executable(P3865 P3865.cpp)
add_executable(f f.cpp)
add_executable(P38651 "P3865(treenumber).cpp")