cmake_minimum_required(VERSION 3.16)
project(07_11)

set(CMAKE_CXX_STANDARD 11)

add_executable(07_11 main.cpp)
add_executable(P3327 P3327.cpp)
add_executable(POJ3090 POJ3090.cpp)
add_executable(HDOJ2138 HDOJ2138.cpp)
add_executable(create create.cpp)
add_executable(t t.cpp)
add_executable(std std.cpp)
add_executable(ai2020a ai2020a.cpp)
add_executable(ai2020b ai2020b.cpp)
add_executable(ai2020c ai2020c.cpp)
add_executable(ai2020d ai2020d.cpp)
add_executable(P3865 P3865.cpp)
add_executable(P1390 P1390.cpp)
add_executable(P4779 P4779.cpp)
add_executable(test test.cpp)
add_executable(P1880 P1880.cpp)
add_executable(P4035 P4035.cpp)