cmake_minimum_required(VERSION 3.16)
project(07_13)

set(CMAKE_CXX_STANDARD 14)

add_executable(07_13 main.cpp)
add_executable(KSA KSA.cpp)
add_executable(USACO20OPEN1 USACO20OPEN1.cpp)
add_executable(P3809 P3809.cpp)
add_executable(tst tst.cpp)
add_executable(P1802 P1802.cpp)
add_executable(P1049 P1049.cpp)
add_executable(P1757 P1757.cpp)
add_executable(P1832 P1832.cpp)
add_executable(P1006 P1006.cpp)
add_executable(P1004 P1004.cpp)
add_executable(P1220 P1220.cpp)
add_executable(CH5302 CH5302.cpp)
add_executable(P1203 P1203.cpp)
add_executable(P1507 P1507.cpp)
add_executable(test test.cpp)
add_executable(P2858 P2858.cpp)
add_executable(P1091 P1091.cpp)
add_executable(P1077 P1077.cpp)
add_executable(P1095 P1095.cpp)
add_executable(HDOJ1159 HDOJ1159.cpp)
add_executable(P1435 P1435.cpp)
add_executable(P5662 P5662.cpp)
add_executable(P2938 P2938.cpp)
add_executable(P1364 P1364.cpp)
add_executable(Treap Treap.cpp)
add_executable(out out.cpp)
add_executable(P1564 P1564.cpp)
add_executable(P1020 P1020.cpp)
add_executable(CF656A CF656A.cpp)
add_executable(CF656B CF656B.cpp)
add_executable(CF656C CF656C.cpp)
add_executable(P1103 P1103.cpp)
add_executable(P1833 P1833.cpp)
add_executable(P1352 P1352.cpp)
add_executable(T138812 T138812.cpp)
add_executable(T138811 T138811.cpp)
add_executable(T138807 T138807.cpp)
add_executable(T138810 T138810.cpp)
add_executable(T138809 T138809.cpp)
add_executable(P2016 P2016.cpp)
add_executable(UVA1292 UVA1292.cpp)
add_executable(P2014 P2014.cpp)
add_executable(P2015 P2015.cpp)