cmake_minimum_required(VERSION 3.16)
project(07_19)

set(CMAKE_CXX_STANDARD 14)

add_executable(07_19 main.cpp)
add_executable(Dt Dt.cpp)
add_executable(Pd Pd.cpp)
add_executable(segment_tree segment_tree.cpp)
add_executable(Tm Tm.cpp)
add_executable(P2759 P2759.cpp)
add_executable(P1542 P1542.cpp)
add_executable(P1083 P1083.cpp)
add_executable(chess chess.cpp)
add_executable(set set.cpp)
add_executable(programme programme.cpp)
add_executable(t t.cpp)
add_executable(JS629 JS629.cpp)
add_executable(P3366 P3366.cpp)
add_executable(st st.cpp)
add_executable(JS630 JS630.cpp)
add_executable(P2964 P2964.cpp)
add_executable(P3507 P3507.cpp)
add_executable(climb climb.cpp)
add_executable(h h.cpp)
add_executable(P2015 P2015.cpp)
add_executable(P1886 P1886.cpp)
add_executable(UVA10004 UVA10004.cpp)
add_executable(UVA10505 UVA10505.cpp)
add_executable(T1 T1.cpp)
add_executable(P3388 P3388.cpp)
add_executable(UVA11426 UVA11426.cpp)
add_executable(divisors divisors.cpp)
add_executable(marcket marcket.cpp)
add_executable(UVA796 UVA796.cpp)
add_executable(P3371 P3371.cpp)
add_executable(P6136 P6136.cpp)
add_executable(ch ch.cpp)
add_executable(SP1716 SP1716.cpp)
add_executable(x x.cpp)
add_executable(JS854 JS854.cpp)
add_executable(JS853 JS853.cpp)
add_executable(JS739 JS739.cpp)
add_executable(UVA12167 UVA12167.cpp)
add_executable(zkw1 zkw1.cpp)
add_executable(UVA12086 UVA12086.cpp)
add_executable(T138485 T138485.cpp)
add_executable(T138483 T138483.cpp)
add_executable(P3379 P3379.cpp)
add_executable(JS787 JS787.cpp)
add_executable(JS788 JS788.cpp)
add_executable(HDOJ2586 HDOJ2586.cpp)
add_executable(P4281 P4281.cpp)
add_executable(P3128 P3128.cpp)
add_executable(P3375 P3375.cpp)
add_executable(U121618 U121618.cpp)
add_executable(POJ3764 POJ3764.cpp)
add_executable(P3808 P3808.cpp)
add_executable(P3796 P3796.cpp)
add_executable(P5357 P5357.cpp)
add_executable(P3966 P3966.cpp)