cmake_minimum_required(VERSION 3.16)
project(07_29)

set(CMAKE_CXX_STANDARD 14)

add_executable(07_29 main.cpp)
add_executable(acmachine acmachine.cpp)
add_executable(P5231 P5231.cpp)
add_executable(P2444 P2444.cpp)
add_executable(CF1389A CF1389A.cpp)
add_executable(P4556 P4556.cpp)
add_executable(P1463 P1463.cpp)
add_executable(P4310 P4310.cpp)
add_executable(P1944 P1944.cpp)
add_executable(test test.cpp)
add_executable(P1772 P1772.cpp)
add_executable(P1284 P1284.cpp)
add_executable(P4158 P4158.cpp)
add_executable(CF1388A CF1388A.cpp)
add_executable(CF1388B CF1388B.cpp)
add_executable(CF1388E CF1388E.cpp)
add_executable(P1516 P1516.cpp)
add_executable(P1156 P1156.cpp)
add_executable(P2340 P2340.cpp)
add_executable(CF1389B CF1389B.cpp)
add_executable(CF1389C CF1389C.cpp)
add_executable(CF1389D CF1389D.cpp)
add_executable(CF1389G CF1389G.cpp)
add_executable(P4141 P4141.cpp)
add_executable(P3205 P3205.cpp)
add_executable(CF1389E CF1389E.cpp)
add_executable(CF1389F CF1389F.cpp)
add_executable(P2358 P2358.cpp)
add_executable(P2054 P2054.cpp)