cmake_minimum_required(VERSION 3.16)
project(08_02)

set(CMAKE_CXX_STANDARD 14)

add_executable(08_02 main.cpp)
add_executable(loj6280 loj6280.cpp)
add_executable(loj6281 loj6281.cpp)
add_executable(abc174a abc174a.cpp)
add_executable(abc174b abc174b.cpp)
add_executable(abc174f abc174f.cpp)
add_executable(abc174e abc174e.cpp)
add_executable(P1884 "P1884(segment tree).cpp")
add_executable(CF1388C CF1388C.cpp)
add_executable(overplanting "overplanting(Manacher).cpp")
add_executable(loj6282 loj6282.cpp)
add_executable(P3048 P3048.cpp)
add_executable(CF1388D CF1388D.cpp)
add_executable(test test.cpp)
add_executable(abc174d abc174d.cpp)
add_executable(abc174c abc174c.cpp)
add_executable(T130950 T130950.cpp)
add_executable(T130618 T130618.cpp)
add_executable(P1836 P1836.cpp)
add_executable(P3044 P3044.cpp)
add_executable(P3049 P3049.cpp)
add_executable(T132682 T132682.cpp)
add_executable(T139773 T139773.cpp)
add_executable(T133471 T133471.cpp)
add_executable(T134445 T134445.cpp)
add_executable(test2 test2.cpp)
add_executable(P1040 P1040.cpp)
add_executable(P4170 P4170.cpp)
add_executable(P4933 P4933.cpp)
add_executable(P3205 P3205.cpp)