cmake_minimum_required(VERSION 3.16)
project(08_05)

set(CMAKE_CXX_STANDARD 14)

add_executable(08_05 main.cpp)
add_executable(Dijkstra Dijkstra.cpp)
add_executable(P1849 P1849.cpp)
add_executable(P2698 P2698.cpp)
add_executable(T139773 T139773.cpp)
add_executable(P4162 P4162.cpp)
add_executable(SP22393 SP22393.cpp)
add_executable(test test.cpp)
add_executable(P2893 P2893.cpp)
add_executable(CF1399A CF1399A.cpp)
add_executable(CF1399B CF1399B.cpp)
add_executable(CF1399C CF1399C.cpp)
add_executable(CF1399D CF1399D.cpp)
add_executable(P1352 P1352.cpp)
add_executable(P1270 P1270.cpp)
add_executable(P1131 P1131.cpp)
add_executable(P2279 P2279.cpp)
add_executable(btest1 btest1.cpp)
add_executable(P2899 P2899.cpp)
add_executable(CF1399E1 CF1399E1.cpp)
add_executable(CF1399E2 CF1399E2.cpp)
add_executable(UVA1218 UVA1218.cpp)
add_executable(P2458 P2458.cpp)
add_executable(P3942 P3942.cpp)
add_executable(P1040 P1040.cpp)