cmake_minimum_required(VERSION 3.16)
project(08_08)

set(CMAKE_CXX_STANDARD 98)

add_executable(08_08 main.cpp)
add_executable(P2016 P2016.cpp)
add_executable(P2341 P2341.cpp)
add_executable(T141164 T141164.cpp)
add_executable(T141165 T141165.cpp)
add_executable(T141166 T141166.cpp)
add_executable(test test.cpp)
add_executable(P1262 P1262.cpp)
add_executable(P2746 P2746.cpp)
add_executable(P1407 P1407.cpp)
add_executable(P4819 P4819.cpp)
add_executable(P2002 P2002.cpp)
add_executable(P2169 P2169.cpp)
add_executable(P1659 P1659.cpp)
add_executable(P3119 P3119.cpp)
add_executable(CF1391A CF1391A.cpp)
add_executable(CF1391B CF1391B.cpp)
add_executable(P3386 P3386.cpp)
add_executable(P2071 P2071.cpp)
add_executable(P1129 P1129.cpp)
add_executable(P2756 P2756.cpp)
add_executable(P2825 P2825.cpp)
add_executable(P2055 P2055.cpp)
add_executable(P1879 P1879.cpp)
add_executable(P2704 P2704.cpp)
add_executable(POJ2411 POJ2411.cpp)