cmake_minimum_required(VERSION 3.17)
project(08_11)

set(CMAKE_CXX_STANDARD 98)

add_executable(08_11 main.cpp)
add_executable(P1896 P1896.cpp)
add_executable(P3092 P3092.cpp)
add_executable(P2622 P2622.cpp)
add_executable(test test.cpp)
add_executable(P3694 P3694.cpp)
add_executable(P3853 P3853.cpp)
add_executable(P2585 P2585.cpp)
add_executable(P1273 P1273.cpp)
add_executable(P1272 P1272.cpp)
add_executable(CF1395A CF1395A.cpp)
add_executable(P2627 P2627.cpp)
add_executable(P1714 P1714.cpp)
add_executable(P2216 P2216.cpp)
add_executable(P2564 P2564.cpp)
add_executable(P4588 P4588.cpp)
add_executable(P1438 P1438.cpp)
add_executable(P3478 P3478.cpp)
add_executable(P3724 P3724.cpp)
add_executable(P5504 P5504.cpp)
add_executable(P2986 P2986.cpp)