cmake_minimum_required(VERSION 3.17)
project(08_14)

set(CMAKE_CXX_STANDARD 98)

add_executable(08_14 main.cpp)
add_executable(CF1187E CF1187E.cpp)
add_executable(P5815 P5815.cpp)
add_executable(test test.cpp)
add_executable(P2845 P2845.cpp)
add_executable(P3373 P3373.cpp)
add_executable(SP1043 SP1043.cpp)
add_executable(SP1557 SP1557.cpp)
add_executable(SP2713 SP2713.cpp)
add_executable(P4145 P4145.cpp)
add_executable(SP2916 SP2916.cpp)
add_executable(P4198 P4198.cpp)
add_executable(P2824 P2824.cpp)
add_executable(CF600E CF600E.cpp)
add_executable(CF208E CF208E.cpp)
add_executable(CF1392A CF1392A.cpp)
add_executable(CF1392B CF1392B.cpp)
add_executable(CF1392C CF1392C.cpp)
add_executable(P4973 P4973.cpp)
add_executable(CF246E CF246E.cpp)
add_executable(CF375D CF375D.cpp)
add_executable(CF1009F CF1009F.cpp)
add_executable(P3384 P3384.cpp)
add_executable(delicacy delicacy.cpp)
add_executable(P2146 P2146.cpp)