cmake_minimum_required(VERSION 3.17)
project(08_18)

set(CMAKE_CXX_STANDARD 98)

add_executable(08_18 main.cpp)
add_executable(P3178 P3178.cpp)
add_executable(P3871 P3871.cpp)
add_executable(P3224 P3224.cpp)
add_executable(P1456 P1456.cpp)
add_executable(P3605 P3605.cpp)
add_executable(test test.cpp)
add_executable(P3521 P3521.cpp)
add_executable(P5003 P5003.cpp)
add_executable(SP6779 SP6779.cpp)
add_executable(SP375 SP375.cpp)
add_executable(P2312 P2312.cpp)
add_executable(P4071 P4071.cpp)
add_executable(P3622 P3622.cpp)
add_executable(JS980 JS980.cpp)
add_executable(P3216 P3216.cpp)
add_executable(U128166 U128166.cpp)
add_executable(U128329 U128329.cpp)