cmake_minimum_required(VERSION 3.17)
project(09_13)

set(CMAKE_CXX_STANDARD 98)

add_executable(09_13 main.cpp)
add_executable(a a.cpp)
add_executable(b b.cpp)
add_executable(mining mining.cpp)
add_executable(hopscotch hopscotch.cpp)
add_executable(change change.cpp)
add_executable(P5019 P5019.cpp)
add_executable(P5020 P5020.cpp)
add_executable(P3951 P3951.cpp)
add_executable(P3958 P3958.cpp)
add_executable(P1918 P1918.cpp)
add_executable(P6702 P6702.cpp)
add_executable(P6195 P6195.cpp)
add_executable(P1348 P1348.cpp)
add_executable(P1012 P1012.cpp)
add_executable(P6101 P6101.cpp)
add_executable(P6546 P6546.cpp)
add_executable(P6244 P6244.cpp)
add_executable(P1796 P1796.cpp)
add_executable(P2004 P2004.cpp)
add_executable(P6248 P6248.cpp)
add_executable(P3416 P3416.cpp)