cmake_minimum_required(VERSION 3.17)
project(09_18)

set(CMAKE_CXX_STANDARD 98)

add_executable(09_18 main.cpp)
add_executable(P2804 P2804.cpp)
add_executable(test test.cpp)
add_executable(P6559 P6559.cpp)
add_executable(P2440 P2440.cpp)
add_executable(P1466 P1466.cpp)
add_executable(P6771 P6771.cpp)
add_executable(P3399 P3399.cpp)
add_executable(P6282 P6282.cpp)
add_executable(P2782 P2782.cpp)
add_executable(substring substring.cpp)
add_executable(segmenttree segmenttree.cpp)
add_executable(P3384 P3384.cpp)
add_executable(P4873 P4873.cpp)
add_executable(email email.cpp)
add_executable(game game.cpp)
add_executable(delete delete.cpp)
add_executable(rooftrellen rooftrellen.cpp)
add_executable(magnus magnus.cpp)
add_executable(maker maker.cpp)
add_executable(bf bf.cpp)
add_executable(std std.cpp)