cmake_minimum_required(VERSION 3.17)
project(09_21)

set(CMAKE_CXX_STANDARD 98)

add_executable(09_21 main.cpp)
add_executable(main main.cpp)
add_executable(magnus magnus.cpp)
add_executable(choose choose.cpp)
add_executable(test test.cpp)
add_executable(maker cmake-build-debug/maker.cpp)
add_executable(reaction reaction.cpp)
add_executable(std std.cpp)
add_executable(P1137 P1137.cpp)
add_executable(P1240 P1240.cpp)
add_executable(P3467 P3467.cpp)
add_executable(P1823 P1823.cpp)
add_executable(SP1805 SP1805.cpp)
add_executable(UVA1619 UVA1619.cpp)
add_executable(P4147 P4147.cpp)
add_executable(P1169 P1169.cpp)
add_executable(CF817D CF817D.cpp)
add_executable(P1565 P1565.cpp)
add_executable(CF547B CF547B.cpp)
add_executable(UVA437 UVA437.cpp)
add_executable(UVA12558 UVA12558.cpp)
add_executable(P1379 P1379.cpp)
add_executable(P2324 P2324.cpp)