cmake_minimum_required(VERSION 3.17)
project(09_24)

set(CMAKE_CXX_STANDARD 11)

add_executable(09_24 main.cpp)
add_executable(P2962 P2962.cpp)
add_executable(P3871 P3871.cpp)
add_executable(test test.cpp)
add_executable(telewire telewire.cpp)
add_executable(CF1417A CF1417A.cpp)
add_executable(CF1417B CF1417B.cpp)
add_executable(CF1417C CF1417C.cpp)
add_executable(std std.cpp)
add_executable(maker maker.cpp)
add_executable(CF1213G CF1213G.cpp)
add_executable(CF1343D CF1343D.cpp)
add_executable(CF1360H CF1360H.cpp)
add_executable(CF1370D CF1370D.cpp)
add_executable(CF1426A CF1426A.cpp)
add_executable(CF1426B CF1426B.cpp)
add_executable(CF1426D CF1426D.cpp)
add_executable(recite recite.cpp)
add_executable(hack hack.cpp)