cmake_minimum_required(VERSION 3.17)
project(10_06)

set(CMAKE_CXX_STANDARD 98)

add_executable(10_06 main.cpp)
add_executable(nocross nocross.cpp)
add_executable(dugovi dugovi.cpp)
add_executable(code code.cpp)
add_executable(P1081 P1081.cpp)
add_executable(P1429 P1429.cpp)
add_executable(ZR15890 ZR15890.cpp)
add_executable(ZR1591 ZR1591.cpp)
add_executable(test test.cpp)
add_executable(hard hard.cpp)
add_executable(normal normal.cpp)
add_executable(test2 test2.cpp)
add_executable(U134036 U134036.cpp)
add_executable(marathon marathon.cpp)
add_executable(path path.cpp)