cmake_minimum_required(VERSION 3.17)
project(10_23)

set(CMAKE_CXX_STANDARD 98)

add_executable(10_23 main.cpp)
add_executable(thief thief.cpp)
add_executable(test test.cpp)
add_executable(noname noname.cpp)
add_executable(trip trip.cpp)
add_executable(math math.cpp)
add_executable(castle castle.cpp)
add_executable(P3431 P3431.cpp)
add_executable(CF1435A CF1435A.cpp)
add_executable(CF1435B CF1435B.cpp)
add_executable(P2163 P2163.cpp)
add_executable(node node.cpp)
add_executable(P5658 P5658.cpp)
add_executable(a a.cpp)
add_executable(b b.cpp)
add_executable(police police.cpp)
add_executable(and and.cpp)
add_executable(rectangle rectangle.cpp)
add_executable(leader leader.cpp)
add_executable(building building.cpp)
add_executable(byethree byethree.cpp)