cmake_minimum_required(VERSION 3.17)
project(10_29)

set(CMAKE_CXX_STANDARD 98)

add_executable(10_29 main.cpp)
add_executable(ZR1584 ZR1584.cpp)
add_executable(illusion illusion.cpp)
add_executable(loj12a loj12a.cpp)
add_executable(test test.cpp)
add_executable(maker maker.cpp)
add_executable(std std.cpp)
add_executable(magic magic.cpp)
add_executable(xmasdag xmasdag.cpp)
add_executable(xmasinterval xmasinterval.cpp)
add_executable(CF1445A CF1445A.cpp)
add_executable(CF1445B CF1445B.cpp)
add_executable(CF1445C CF1445C.cpp)
add_executable(CF1437B CF1437B.cpp)