# cmake_minimum_required(VERSION <specify CMake version here>)
project(11_14)

set(CMAKE_CXX_STANDARD 98)

add_executable(11_14 main.cpp)
add_executable(U140686 U140686.cpp)
add_executable(CF245H CF245H.cpp)
add_executable(count count.cpp)
add_executable(string string.cpp)
add_executable(CF914D CF914D.cpp)
add_executable(abc184a abc184a.cpp)
add_executable(P5541 P5541.cpp)