# cmake_minimum_required(VERSION <specify CMake version here>)
project(12_13)

set(CMAKE_CXX_STANDARD 14)

add_executable(12_13 main.cpp)
add_executable(1 1.cpp)

add_executable(abf abf.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(7 7.cpp)
add_executable(8 8.cpp)
add_executable(6 6.cpp)